[hasty] fix xl navbar spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,10 @@
   right: 12%;
 }
 
+.header-top{
+  margin-top: 10%;
+}
+
 .flex-horizontal-desktop{
   display: flex;
   flex-direction: row;
